--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,19 +1,33 @@
 <div class="container">
-    <div class="row">
-        <!--About me-->
-        <div class="col-lg shadow border m-1">
-            <div class="text-center">
-                <h2>About Me</h2>
-                <img src="../../assets/Shathanan Amirthalingam_6019.jpg" alt="profile picture" width="256" height="256" class="rounded-circle">
-                <p>Mein Name ist Shathanan Amirthalingam und ich bin als Projektleiter bei der Five Informatik AG in Schönbühl tätig. Neben meiner beruflichen Tätigkeit engagiere ich mich im 5. Semester meines Studiums in Wirtschaftsinformatik an der Berner Fachhochschule. Diese Doppelaspekt ermöglicht es mir, sowohl praktische Erfahrungen in der IT-Branche zu sammeln, als auch mein theoretisches Wissen zu vertiefen und anzuwenden.</p>
-            </div>
-        </div>
-        <!--Featured Project-->
-        <div class="col-lg shadow border m-1">
-            <div class="text-center">
-                <h2>Featured Project</h2>
-            </div>
-            
-        </div>
+  <div class="row">
+    <!--About me-->
+    <div class="col-lg shadow border m-1">
+      <div class="text-center">
+        <h2>About Me</h2>
+        <img
+          src="../../assets/Shathanan Amirthalingam_6019.jpg"
+          alt="profile picture"
+          width="256"
+          height="256"
+          class="rounded-circle"
+        />
+        <p>
+          Mein Name ist Shathanan Amirthalingam und ich bin als Projektleiter
+          bei der Five Informatik AG in Schönbühl tätig. Neben meiner
+          beruflichen Tätigkeit engagiere ich mich im 5. Semester meines
+          Studiums in Wirtschaftsinformatik an der Berner Fachhochschule. Diese
+          Doppelaspekt ermöglicht es mir, sowohl praktische Erfahrungen in der
+          IT-Branche zu sammeln, als auch mein theoretisches Wissen zu vertiefen
+          und anzuwenden.
+        </p>
+      </div>
     </div>
+    <!--Featured Project-->
+    <div class="col-lg shadow border m-1">
+      <div class="text-center">
+        <h2>Featured Project</h2>
+        <h4>{{ featuredProject.name }}</h4>
+      </div>
+    </div>
+  </div>
 </div>
