--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,54 @@
-<p>contact works!</p>
+<div class="container">
+  <div class="text-center border mb-5 shadow rounded">
+    <h1>Kontakt</h1>
+    <p>
+      Sie erreichen mich unter der folgender E-mail Adresse:
+      <b>shathanan@gmx.ch</b>
+    </p>
+    <p>Fühlen Sie sich frei bei mir zu melden:</p>
+  </div>
+
+  <div class="list-group shadow">
+    <a
+      href="//linkedin.com/in/shathanan-amirthalingam-961b42216/"
+      target="_blank"
+      class="list-group-item list-group-item-action d-flex gap-3 py-3"
+    >
+      <img
+        src="../../assets/LinkedIn.png"
+        width="32"
+        height="32"
+        class="rounded-circle flex-shrink-0 me-5"
+      />
+      <h3 class="mb-0">LinkedIn</h3>
+    </a>
+
+    <a
+      href="//github.com/AmirSana/AngularPortfolioWebsite"
+      target="_blank"
+      class="list-group-item list-group-item-action d-flex gap-3 py-3"
+    >
+      <img
+        src="../../assets/GitHub.png"
+        width="32"
+        height="32"
+        class="rounded-circle flex-shrink-0 me-5"
+      />
+      <h3 class="mb-0">GitHub</h3>
+    </a>
+
+    <a
+      href="//facebook.com/profile.php?id=100072674802842"
+      target="_blank"
+      class="list-group-item list-group-item-action d-flex gap-3 py-3"
+    >
+      <img
+        src="../../assets/Facebook.png"
+        width="32"
+        height="32"
+        class="rounded-circle flex-shrink-0 me-5"
+      />
+      <h3 class="mb-0">Facebook</h3>
+    </a>
+  </div>
+</div>
