--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,14 +3,15 @@
     <!--About me-->
     <div class="col-lg shadow border m-1">
       <div class="text-center">
-        <h2>About Me</h2>
+        <h2>Über mich</h2>
         <img
           src="../../assets/Shathanan Amirthalingam_6019.jpg"
           alt="profile picture"
-          width="256"
-          height="256"
+          width="230"
+          height="260"
           class="rounded-circle"
         />
+
         <p>
           Mein Name ist Shathanan Amirthalingam und ich bin als Projektleiter
           bei der Five Informatik AG in Schönbühl tätig. Neben meiner
@@ -25,8 +26,8 @@
     <!--Featured Project-->
     <div class="col-lg shadow border m-1">
       <div class="text-center">
-        <h2>Featured Project</h2>
-        <h4>{{ featuredProject.name }}</h4>
+        <h2>Zukünftige Projekte</h2>
+        <h4>Erweiterung von TAXWARE AG</h4>
       </div>
 
       <carousel>
@@ -36,12 +37,13 @@
               src="{{ picture }}"
               alt="slide"
               style="display: block; width: 100%"
-          /></slide>
+            />
+          </slide>
         </div>
       </carousel>
 
-      <p class="mt-2">{{ featuredProject.summary }}</p>
-      <p>Visit the Portfolio section to learn more!</p>
+      <p class="mt-2">Wir erweitern unsere TaxWare Software in TaxWare WEB.</p>
+      <p>Besuchen Sie den Portfolio-Bereich, um mehr zu erfahren!</p>
     </div>
   </div>
 </div>
