--- a/src/app/portrfolio/portrfolio.component.html
+++ b/src/app/portrfolio/portrfolio.component.html
@@ -15,7 +15,7 @@
       <form>
         <div class="row mx-0">
           <div class="col">
-            <small><b>Languages:</b></small>
+            <small><b>Sprache:</b></small>
             <div class="form group">
               <div class="form check">
                 <input
