--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,6 +1,6 @@
 <div class="container text-center">
   <button (click)="downloadFile()" class="btn btn-primary mb-5 shadow border">
-    Download PDF Resume
+    Lebenslauf herunterladen
   </button>
 
   <accordion [isAnimated]="true" class="shadow">
