--- a/src/app/project-card/project-card.component.html
+++ b/src/app/project-card/project-card.component.html
@@ -1,18 +1,21 @@
 <div class="card shadow text-center" style="max-width: 350px; min-width: 350px">
   <div class="card-body">
-    <h5 class="card-title">{{ project.name }}</h5>
-    <p class="card-text">{{ project.summary }}</p>
-    <button class="btn btn-primary" (click)="OpenProjectModal()">
-      View more
-    </button>
+    <h5 class="card-title">Projekte Shathanan Amirthalingam</h5>
+    <p class="card-text">
+      Momentan arbeite ich an verschieden Projekten bei meiner Arbeit. Wir
+      erweitern unsere Software in eine WEB-Applikation um.
+    </p>
+    <button class="btn btn-primary" (click)="OpenProjectModal()">Mehr</button>
   </div>
 
   <div class="card-footer">
     <div class="d-flex flex-wrap justify-content-center">
-      <div *ngFor="let tag of project.tags">
-        <div class="tag me-2 mb-1" [style.backround-color]="tag.color">
-          {{ tag }}
-        </div>
+      <div
+        *ngFor="let tag of project.tags"
+        class="tag me-2 mb-1"
+        [style.background-color]="tag.color"
+      >
+        {{ tag }}
       </div>
     </div>
   </div>
