--- a/src/app/project-modal/project-modal.component.html
+++ b/src/app/project-modal/project-modal.component.html
@@ -8,17 +8,24 @@
     <div *ngFor="let picture of project.pictures">
       <slide
         ><img
-          src="{{ picture }}"
+          src="../../assets/TaxWare.png"
           alt="slide"
           style="display: block; width: 100%"
       /></slide>
     </div>
   </carousel>
 
-  <h3 class="mt-2">Description</h3>
-  <p>{{ project.description }}</p>
+  <h3 class="mt-2">Beschreibung</h3>
   <p>
-    You can find this project on Github
+    Normalerweise bezieht sich die Erweiterung einer Software auf die
+    Entwicklung neuer Funktionen, Verbesserungen der Benutzerfreundlichkeit,
+    Integration zusätzlicher Module oder die Anpassung an neue Technologien, um
+    die Leistungsfähigkeit und Effizienz zu steigern. Wenn Sie weitere
+    Informationen oder spezifische Details zu diesem Projekt haben, kann ich
+    Ihnen gerne dabei helfen, diese genauer zu beschreiben oder zu erklären.
+  </p>
+  <p>
+    Sie finden das unter folgendem Link:
     <a href="{{ project.projectLink }}" target="_blank">here</a>
   </p>
 
