--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
       <div class="text-center">
         <h2>Über mich</h2>
         <img
-          src="assets/Shathanan Amirthalingam_6019.jpg"
+          src="./assets/Shathanan Amirthalingam_6019.jpg"
           alt="profile picture"
           width="230"
           height="260"
