Change src path

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -34,7 +34,7 @@
         <div *ngFor="let picture of featuredProject.pictures">
           <slide
             ><img
-              src="{{ picture }}"
+              src="{{ picture.pictures }}"
               alt="slide"
               style="display: block; width: 100%"
             />
