--- a/src/app/project-modal/project-modal.component.html
+++ b/src/app/project-modal/project-modal.component.html
@@ -6,12 +6,13 @@
 <div class="modal-body">
   <carousel>
     <div *ngFor="let picture of project.pictures">
-      <slide
-        ><img
-          src="../../assets/TaxWare.png"
+      <slide>
+        <img
+          src="{{ picture }}"
           alt="slide"
           style="display: block; width: 100%"
-      /></slide>
+        />
+      </slide>
     </div>
   </carousel>
 
