--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -15,7 +15,7 @@
       class="list-group-item list-group-item-action d-flex gap-3 py-3"
     >
       <img
-        src="../../assets/LinkedIn.png"
+        src="./assets/LinkedIn.png"
         width="32"
         height="32"
         class="rounded-circle flex-shrink-0 me-5"
@@ -29,7 +29,7 @@
       class="list-group-item list-group-item-action d-flex gap-3 py-3"
     >
       <img
-        src="../../assets/GitHub.png"
+        src="./assets/GitHub.png"
         width="32"
         height="32"
         class="rounded-circle flex-shrink-0 me-5"
@@ -43,7 +43,7 @@
       class="list-group-item list-group-item-action d-flex gap-3 py-3"
     >
       <img
-        src="../../assets/Facebook.png"
+        src="./assets/Facebook.png"
         width="32"
         height="32"
         class="rounded-circle flex-shrink-0 me-5"
